--- a/sass/index.scss
+++ b/sass/index.scss
@@ -217,10 +217,11 @@ header {
                 margin: 0 auto;
                 font-size: 1.1em;
                 border: 1px solid #FD2B2A;
-                padding: 8px;
+                padding: 8px 20px;
                 color: white;
                 background-color: #FD2B2A;
                 border-radius: 30px;
+                text-transform: uppercase;
                 text-decoration: none;
 
                 &:hover {
