mobile responsivenes init fixes

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -197,8 +197,8 @@ header {
 
         #submit-form {
 
-            .row{
-                width: 90%;  
+            .row {
+                width: 90%;
             }
 
             input[type=text] {
@@ -295,4 +295,101 @@ footer {}
     font-size: 1.5em;
     margin: 50px 0px;
     font-weight: 600;
+}
+
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+
+    .main {
+
+        .hero {
+
+            .hero__content {
+                display: flex;
+                width: 280px;
+                margin: 0 auto;
+
+                .__logo {
+                    height: 150px;
+                    border-right: 1px solid #aaa;
+                }
+
+                .hero__text {
+                    margin: 0px auto;
+                    padding: 10px 0px 10px;
+                    text-align: center;
+
+                    h2 {
+                        font-size: 1.0em;
+                    }
+
+                    a {
+                        font-size: 0.9em;
+                    }
+                }
+            }
+
+        }
+
+        .portfolio {
+            margin: 100px 0;
+    
+            .row {
+                width: 100%;
+                display: block;
+            }
+    
+            .pf-card {
+                display: inline-block;
+                margin: 0.5em 0.5em;
+                color: white;
+    
+                .card-header {
+                    margin-top: 4em;
+                    font-size: 1.2em;
+                    font-weight: 600;
+                }
+    
+                .description {
+                    padding: 0em 2em;
+                }
+    
+                &.large {
+                    width: 280px;
+                    height: 280px;
+                    background-position: 50%;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                }
+    
+    
+                &.small {
+                    width: 280px;
+                    height: 280px;
+                    background-position: 50%;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+    
+                    .card-header {
+                        margin-top: 2em;
+                        font-size: 1.2em;
+                        font-weight: 600;
+                    }
+                }
+            }
+        }
+    }
+
+    
+
+
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 480px) and (max-device-width : 768px) {}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+    /* Styles */
 }
