--- a/sass/index.scss
+++ b/sass/index.scss
@@ -379,17 +379,99 @@ footer {}
                 }
             }
         }
+
+        .contact {
+
+            .row {
+                margin: 0 auto;
+                width: 100%;
+                text-align: center;
+                display: block;
+            }
+    
+            #submit-form {
+    
+                .row {
+                    width: 90%;
+                }
+    
+                input[type=text] {
+                    border: none;
+                    box-shadow: none;
+                    border-bottom: 1px solid #adadad;
+                    border-radius: 0px;
+                    padding: 15px;
+                    height: auto;
+                    margin-bottom: 30px;
+                    background-color: #f8f8f8;
+                }
+    
+                input[type=submit] {
+                    display: block;
+                    margin: 0 auto;
+                    font-size: 1.1em;
+                    border: 1px solid #FD2B2A;
+                    padding: 8px 20px;
+                    color: white;
+                    background-color: #FD2B2A;
+                    border-radius: 30px;
+                    text-transform: uppercase;
+                    text-decoration: none;
+    
+                    &:hover {
+                        color: #FD2B2A;
+                        background-color: #FFF;
+                    }
+                }
+    
+                .half-width {
+                    display: block;
+                    width: 80%;
+                    margin: auto;
+                }
+    
+                .full-width {
+                    display: block;
+                    width: 80%;
+                    margin: auto;
+                }
+            }
+        }
+
     }
 
+
+    .card {
     
+        .card-header {
+            text-align: center;
+            font-size: 1.25em;
+        }
+    
+        ul {
+            li {
+                padding-bottom: 1em;
+                font-size: 1.1em;
+            }
+        }
+    
+        &.medium {
+            height: 250px;
+            width: 250px;
+            margin: 20px 1.2em;
+        }
+    
+        &.very-large {
+            width: 250px;
+            height: 100%;
+            margin: 0px 0px 25px 0px;
+        }
+    
+        &.square {
+            width: 250px;
+        }
+    
+    }
 
 
-}
-
-/* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 480px) and (max-device-width : 768px) {}
-
-/* iPads (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
-    /* Styles */
 }
