--- a/sass/index.scss
+++ b/sass/index.scss
@@ -417,6 +417,7 @@ footer {}
                     border-radius: 30px;
                     text-transform: uppercase;
                     text-decoration: none;
+                    box-sizing: border-box;
     
                     &:hover {
                         color: #FD2B2A;
