--- a/sass/index.scss
+++ b/sass/index.scss
@@ -334,27 +334,27 @@ footer {}
 
         .portfolio {
             margin: 100px 0;
-    
+
             .row {
                 width: 100%;
                 display: block;
             }
-    
+
             .pf-card {
                 display: inline-block;
                 margin: 0.5em 0.5em;
                 color: white;
-    
+
                 .card-header {
                     margin-top: 4em;
                     font-size: 1.2em;
                     font-weight: 600;
                 }
-    
+
                 .description {
                     padding: 0em 2em;
                 }
-    
+
                 &.large {
                     width: 280px;
                     height: 280px;
@@ -362,15 +362,15 @@ footer {}
                     background-repeat: no-repeat;
                     background-size: cover;
                 }
-    
-    
+
+
                 &.small {
                     width: 280px;
                     height: 280px;
                     background-position: 50%;
                     background-repeat: no-repeat;
                     background-size: cover;
-    
+
                     .card-header {
                         margin-top: 2em;
                         font-size: 1.2em;
@@ -388,13 +388,13 @@ footer {}
                 text-align: center;
                 display: block;
             }
-    
+
             #submit-form {
-    
+
                 .row {
                     width: 90%;
                 }
-    
+
                 input[type=text] {
                     border: none;
                     box-shadow: none;
@@ -405,32 +405,32 @@ footer {}
                     margin-bottom: 30px;
                     background-color: #f8f8f8;
                 }
-    
+
                 input[type=submit] {
-                    display: block;
-                    margin: 0 auto;
-                    font-size: 1.1em;
-                    border: 1px solid #FD2B2A;
-                    padding: 8px 20px;
-                    color: white;
-                    background-color: #FD2B2A;
-                    border-radius: 30px;
-                    text-transform: uppercase;
-                    text-decoration: none;
+                    height: 42px;
+                    border-radius: 27px;
+                    background: #FD2B2A;
+                    color: #fff;
+                    padding: 0 3em;
+                    transition: all ease-out 200ms;
+                    font-weight: 600;
+                    line-height: 45px;
                     box-sizing: border-box;
-    
+                    display: block;
+                    text-transform: uppercase;
+
                     &:hover {
                         color: #FD2B2A;
                         background-color: #FFF;
                     }
                 }
-    
+
                 .half-width {
                     display: block;
                     width: 80%;
                     margin: auto;
                 }
-    
+
                 .full-width {
                     display: block;
                     width: 80%;
@@ -443,35 +443,35 @@ footer {}
 
 
     .card {
-    
+
         .card-header {
             text-align: center;
             font-size: 1.25em;
         }
-    
+
         ul {
             li {
                 padding-bottom: 1em;
                 font-size: 1.1em;
             }
         }
-    
+
         &.medium {
             height: 250px;
             width: 250px;
             margin: 20px 1.2em;
         }
-    
+
         &.very-large {
             width: 250px;
             height: 100%;
             margin: 0px 0px 25px 0px;
         }
-    
+
         &.square {
             width: 250px;
         }
-    
+
     }
 
 
