--- a/sass/index.scss
+++ b/sass/index.scss
@@ -71,16 +71,18 @@ header {
             display: flex;
             width: 650px;
             margin: 0 auto;
+            align-items: center;
 
             .__logo {
                 height: 235px;
-                border-right: 1px solid #aaa;
+
             }
 
             .hero__text {
-                margin: 0px auto;
-                padding: 20px 0px 20px;
+                margin: 20px auto;
+                padding: 0px 20px;
                 text-align: center;
+                border-left: 1px solid #aaa;
 
                 h2 {
                     font-size: 1.8em;
@@ -195,6 +197,18 @@ header {
             justify-content: space-between;
         }
 
+        ul{
+            li {
+                padding-bottom: 1.3git em;
+                font-size: 1.1em;
+                list-style: none;
+
+                i{
+                    padding: 10px;
+                }
+            }
+        }
+
         #submit-form {
 
             .row {
@@ -264,10 +278,20 @@ footer {}
         font-size: 1.25em;
     }
 
-    ul {
+    ul.stack__collection{
         li {
             padding-bottom: 1em;
             font-size: 1.1em;
+            list-style: none;
+
+            &:before {
+                position: relative;
+                font-family: "FontAwesome";
+                font-size: 18px;
+                content: "\f192";
+                color: #FD2B2A;
+                margin: 0 12px 0 0;
+            }
         }
     }
 
@@ -301,23 +325,70 @@ footer {}
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 
+    header {
+        .navbar__inner {
+    
+            display: block;
+            margin: 0 auto;
+            text-align: center;
+    
+            .navbar__logo {
+    
+                display: inline-block;
+                padding: 0px 25px;
+    
+                .__logo {
+                    width: 60px;
+                }
+            }
+        }
+    
+        .navbar__wrapper {
+    
+            display: block;
+            width: 95%;
+            text-align: center;
+    
+            .navbar_list {
+    
+                padding: 5px;
+                display: flex;
+                justify-content: space-evenly;
+    
+                li {
+                    display: inline-block;
+                    padding: 0px;
+    
+                    a {
+                        text-decoration: none;
+                        padding: 15px 15px;
+                        font-size: 1.1em;
+                        color: #707070;
+    
+                        &:hover {
+                            border-bottom: 2px solid #FD2B2A;
+                        }
+                    }
+                }
+            }
+        }
+    }
     .main {
 
         .hero {
 
             .hero__content {
                 display: flex;
-                width: 300px;
+                width: 280px;
                 margin: 0 auto;
 
                 .__logo {
                     height: 150px;
-                    border-right: 1px solid #aaa;
                 }
 
                 .hero__text {
-                    margin: 0px auto;
-                    padding: 10px 0px 10px;
+                    margin: 20px auto;
+                    padding: 0px 10px;
                     text-align: center;
 
                     h2 {
@@ -459,7 +530,6 @@ footer {}
         }
 
         &.medium {
-            height: 250px;
             width: 250px;
             margin: 20px 1.2em;
         }
@@ -468,6 +538,7 @@ footer {}
             width: 250px;
             height: 100%;
             margin: 0px 0px 25px 0px;
+            padding-bottom: 2em;
         }
 
         &.square {
