--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -193,15 +193,41 @@ header .navbar__wrapper .navbar_list li a:hover {
   font-size: 1.1em;
   list-style: none;
 }
-/* line 206, ../sass/index.scss */
-.main .contact ul li i {
-  padding: 10px;
+/* line 207, ../sass/index.scss */
+.main .contact ul li:before {
+  position: relative;
+  font-family: "FontAwesome";
+  font-size: 18px;
+  color: #FD2B2A;
+  margin: 0 12px 0 0;
 }
-/* line 214, ../sass/index.scss */
+/* line 215, ../sass/index.scss */
+.main .contact ul li.first:before {
+  content: "\f041";
+  margin: 0 20px 0 0;
+}
+/* line 219, ../sass/index.scss */
+.main .contact ul li.second:before {
+  content: "\f0e0";
+}
+/* line 222, ../sass/index.scss */
+.main .contact ul li.third:before {
+  content: "\f095";
+}
+/* line 226, ../sass/index.scss */
+.main .contact ul li span {
+  margin-left: 20px;
+}
+/* line 230, ../sass/index.scss */
+.main .contact ul li i {
+  color: #FD2B2A;
+  font-size: 0.8em;
+}
+/* line 240, ../sass/index.scss */
 .main .contact #submit-form .row {
   width: 90%;
 }
-/* line 218, ../sass/index.scss */
+/* line 244, ../sass/index.scss */
 .main .contact #submit-form input[type=text] {
   border: none;
   box-shadow: none;
@@ -212,7 +238,7 @@ header .navbar__wrapper .navbar_list li a:hover {
   margin-bottom: 30px;
   background-color: #f8f8f8;
 }
-/* line 229, ../sass/index.scss */
+/* line 255, ../sass/index.scss */
 .main .contact #submit-form input[type=submit] {
   display: block;
   margin: 0 auto;
@@ -225,23 +251,28 @@ header .navbar__wrapper .navbar_list li a:hover {
   text-transform: uppercase;
   text-decoration: none;
 }
-/* line 241, ../sass/index.scss */
+/* line 267, ../sass/index.scss */
 .main .contact #submit-form input[type=submit]:hover {
   color: #FD2B2A;
   background-color: #FFF;
 }
-/* line 247, ../sass/index.scss */
+/* line 273, ../sass/index.scss */
 .main .contact #submit-form .half-width {
   display: inline-block;
   width: 45%;
 }
-/* line 252, ../sass/index.scss */
+/* line 278, ../sass/index.scss */
 .main .contact #submit-form .full-width {
   display: inline-block;
   width: 96%;
 }
 
-/* line 263, ../sass/index.scss */
+/* line 287, ../sass/index.scss */
+footer {
+  display: none;
+}
+
+/* line 292, ../sass/index.scss */
 .card {
   background-color: white;
   display: inline-block;
@@ -255,18 +286,18 @@ header .navbar__wrapper .navbar_list li a:hover {
   text-align: left;
   overflow: initial;
 }
-/* line 276, ../sass/index.scss */
+/* line 305, ../sass/index.scss */
 .card .card-header {
   text-align: center;
   font-size: 1.25em;
 }
-/* line 282, ../sass/index.scss */
+/* line 311, ../sass/index.scss */
 .card ul.stack__collection li {
   padding-bottom: 1em;
   font-size: 1.1em;
   list-style: none;
 }
-/* line 287, ../sass/index.scss */
+/* line 316, ../sass/index.scss */
 .card ul.stack__collection li:before {
   position: relative;
   font-family: "FontAwesome";
@@ -275,24 +306,24 @@ header .navbar__wrapper .navbar_list li a:hover {
   color: #FD2B2A;
   margin: 0 12px 0 0;
 }
-/* line 298, ../sass/index.scss */
+/* line 327, ../sass/index.scss */
 .card.medium {
   height: 290px;
   width: 290px;
   margin: 0px 1.2em;
 }
-/* line 304, ../sass/index.scss */
+/* line 333, ../sass/index.scss */
 .card.very-large {
   height: 300px;
   width: 800px;
 }
-/* line 309, ../sass/index.scss */
+/* line 338, ../sass/index.scss */
 .card.square {
   height: 300px;
   width: 300px;
 }
 
-/* line 317, ../sass/index.scss */
+/* line 346, ../sass/index.scss */
 .section-header {
   text-align: center;
   font-size: 1.5em;
@@ -302,100 +333,100 @@ header .navbar__wrapper .navbar_list li a:hover {
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-  /* line 329, ../sass/index.scss */
+  /* line 358, ../sass/index.scss */
   header .navbar__inner {
     display: block;
     margin: 0 auto;
     text-align: center;
   }
-  /* line 335, ../sass/index.scss */
+  /* line 364, ../sass/index.scss */
   header .navbar__inner .navbar__logo {
     display: inline-block;
     padding: 0px 25px;
   }
-  /* line 340, ../sass/index.scss */
+  /* line 369, ../sass/index.scss */
   header .navbar__inner .navbar__logo .__logo {
     width: 60px;
   }
-  /* line 346, ../sass/index.scss */
+  /* line 375, ../sass/index.scss */
   header .navbar__wrapper {
     display: block;
     width: 95%;
     text-align: center;
   }
-  /* line 352, ../sass/index.scss */
+  /* line 381, ../sass/index.scss */
   header .navbar__wrapper .navbar_list {
     padding: 5px;
     display: flex;
     justify-content: space-evenly;
   }
-  /* line 358, ../sass/index.scss */
+  /* line 387, ../sass/index.scss */
   header .navbar__wrapper .navbar_list li {
     display: inline-block;
     padding: 0px;
   }
-  /* line 362, ../sass/index.scss */
+  /* line 391, ../sass/index.scss */
   header .navbar__wrapper .navbar_list li a {
     text-decoration: none;
     padding: 15px 15px;
     font-size: 1.1em;
     color: #707070;
   }
-  /* line 368, ../sass/index.scss */
+  /* line 397, ../sass/index.scss */
   header .navbar__wrapper .navbar_list li a:hover {
     border-bottom: 2px solid #FD2B2A;
   }
 
-  /* line 380, ../sass/index.scss */
+  /* line 409, ../sass/index.scss */
   .main .hero .hero__content {
     display: flex;
-    width: 280px;
+    width: 300px;
     margin: 0 auto;
   }
-  /* line 385, ../sass/index.scss */
+  /* line 414, ../sass/index.scss */
   .main .hero .hero__content .__logo {
     height: 150px;
   }
-  /* line 389, ../sass/index.scss */
+  /* line 418, ../sass/index.scss */
   .main .hero .hero__content .hero__text {
     margin: 20px auto;
     padding: 0px 10px;
     text-align: center;
   }
-  /* line 394, ../sass/index.scss */
+  /* line 423, ../sass/index.scss */
   .main .hero .hero__content .hero__text h2 {
     font-size: 1.0em;
   }
-  /* line 398, ../sass/index.scss */
+  /* line 427, ../sass/index.scss */
   .main .hero .hero__content .hero__text a {
     font-size: 0.9em;
   }
-  /* line 406, ../sass/index.scss */
+  /* line 435, ../sass/index.scss */
   .main .portfolio {
     margin: 100px 0;
   }
-  /* line 409, ../sass/index.scss */
+  /* line 438, ../sass/index.scss */
   .main .portfolio .row {
     width: 100%;
     display: block;
   }
-  /* line 414, ../sass/index.scss */
+  /* line 443, ../sass/index.scss */
   .main .portfolio .pf-card {
     display: inline-block;
     margin: 0.5em 0.5em;
     color: white;
   }
-  /* line 419, ../sass/index.scss */
+  /* line 448, ../sass/index.scss */
   .main .portfolio .pf-card .card-header {
     margin-top: 4em;
     font-size: 1.2em;
     font-weight: 600;
   }
-  /* line 425, ../sass/index.scss */
+  /* line 454, ../sass/index.scss */
   .main .portfolio .pf-card .description {
     padding: 0em 2em;
   }
-  /* line 429, ../sass/index.scss */
+  /* line 458, ../sass/index.scss */
   .main .portfolio .pf-card.large {
     width: 280px;
     height: 280px;
@@ -403,7 +434,7 @@ header .navbar__wrapper .navbar_list li a:hover {
     background-repeat: no-repeat;
     background-size: cover;
   }
-  /* line 438, ../sass/index.scss */
+  /* line 467, ../sass/index.scss */
   .main .portfolio .pf-card.small {
     width: 280px;
     height: 280px;
@@ -411,24 +442,24 @@ header .navbar__wrapper .navbar_list li a:hover {
     background-repeat: no-repeat;
     background-size: cover;
   }
-  /* line 445, ../sass/index.scss */
+  /* line 474, ../sass/index.scss */
   .main .portfolio .pf-card.small .card-header {
     margin-top: 2em;
     font-size: 1.2em;
     font-weight: 600;
   }
-  /* line 456, ../sass/index.scss */
+  /* line 485, ../sass/index.scss */
   .main .contact .row {
     margin: 0 auto;
     width: 100%;
     text-align: center;
     display: block;
   }
-  /* line 465, ../sass/index.scss */
+  /* line 494, ../sass/index.scss */
   .main .contact #submit-form .row {
     width: 90%;
   }
-  /* line 469, ../sass/index.scss */
+  /* line 498, ../sass/index.scss */
   .main .contact #submit-form input[type=text] {
     border: none;
     box-shadow: none;
@@ -439,7 +470,7 @@ header .navbar__wrapper .navbar_list li a:hover {
     margin-bottom: 30px;
     background-color: #f8f8f8;
   }
-  /* line 480, ../sass/index.scss */
+  /* line 509, ../sass/index.scss */
   .main .contact #submit-form input[type=submit] {
     height: 42px;
     border-radius: 27px;
@@ -455,47 +486,51 @@ header .navbar__wrapper .navbar_list li a:hover {
     cursor: pointer;
     text-transform: uppercase;
   }
-  /* line 495, ../sass/index.scss */
+  /* line 524, ../sass/index.scss */
   .main .contact #submit-form input[type=submit]:hover {
     color: #FD2B2A;
     background-color: #FFF;
   }
-  /* line 501, ../sass/index.scss */
+  /* line 530, ../sass/index.scss */
   .main .contact #submit-form .half-width {
     display: block;
     width: 80%;
     margin: auto;
   }
-  /* line 507, ../sass/index.scss */
+  /* line 536, ../sass/index.scss */
   .main .contact #submit-form .full-width {
     display: block;
     width: 80%;
     margin: auto;
   }
 
-  /* line 520, ../sass/index.scss */
+  /* line 547, ../sass/index.scss */
+  .card {
+    padding: 10px 5px;
+  }
+  /* line 550, ../sass/index.scss */
   .card .card-header {
     text-align: center;
     font-size: 1.25em;
   }
-  /* line 526, ../sass/index.scss */
+  /* line 556, ../sass/index.scss */
   .card ul li {
     padding-bottom: 1em;
     font-size: 1.1em;
   }
-  /* line 532, ../sass/index.scss */
+  /* line 562, ../sass/index.scss */
   .card.medium {
     width: 250px;
     margin: 20px 1.2em;
   }
-  /* line 537, ../sass/index.scss */
+  /* line 567, ../sass/index.scss */
   .card.very-large {
     width: 250px;
     height: 100%;
     margin: 0px 0px 25px 0px;
     padding-bottom: 2em;
   }
-  /* line 544, ../sass/index.scss */
+  /* line 574, ../sass/index.scss */
   .card.square {
     width: 250px;
   }
