--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -206,28 +206,28 @@ header .navbar__wrapper .navbar_list li a:hover {
   content: "\f041";
   margin: 0 20px 0 0;
 }
-/* line 219, ../sass/index.scss */
+/* line 220, ../sass/index.scss */
 .main .contact ul li.second:before {
   content: "\f0e0";
 }
-/* line 222, ../sass/index.scss */
+/* line 224, ../sass/index.scss */
 .main .contact ul li.third:before {
   content: "\f095";
 }
-/* line 226, ../sass/index.scss */
+/* line 228, ../sass/index.scss */
 .main .contact ul li span {
   margin-left: 20px;
 }
-/* line 230, ../sass/index.scss */
+/* line 232, ../sass/index.scss */
 .main .contact ul li i {
   color: #FD2B2A;
   font-size: 0.8em;
 }
-/* line 240, ../sass/index.scss */
+/* line 242, ../sass/index.scss */
 .main .contact #submit-form .row {
   width: 90%;
 }
-/* line 244, ../sass/index.scss */
+/* line 246, ../sass/index.scss */
 .main .contact #submit-form input[type=text] {
   border: none;
   box-shadow: none;
@@ -238,7 +238,7 @@ header .navbar__wrapper .navbar_list li a:hover {
   margin-bottom: 30px;
   background-color: #f8f8f8;
 }
-/* line 255, ../sass/index.scss */
+/* line 257, ../sass/index.scss */
 .main .contact #submit-form input[type=submit] {
   display: block;
   margin: 0 auto;
@@ -251,28 +251,29 @@ header .navbar__wrapper .navbar_list li a:hover {
   text-transform: uppercase;
   text-decoration: none;
 }
-/* line 267, ../sass/index.scss */
+/* line 269, ../sass/index.scss */
 .main .contact #submit-form input[type=submit]:hover {
   color: #FD2B2A;
   background-color: #FFF;
 }
-/* line 273, ../sass/index.scss */
+/* line 275, ../sass/index.scss */
 .main .contact #submit-form .half-width {
   display: inline-block;
   width: 45%;
 }
-/* line 278, ../sass/index.scss */
+/* line 280, ../sass/index.scss */
 .main .contact #submit-form .full-width {
   display: inline-block;
   width: 96%;
 }
 
-/* line 287, ../sass/index.scss */
+/* line 289, ../sass/index.scss */
 footer {
-  display: none;
+  display: block;
+  text-align: center;
 }
 
-/* line 292, ../sass/index.scss */
+/* line 294, ../sass/index.scss */
 .card {
   background-color: white;
   display: inline-block;
@@ -286,18 +287,18 @@ footer {
   text-align: left;
   overflow: initial;
 }
-/* line 305, ../sass/index.scss */
+/* line 307, ../sass/index.scss */
 .card .card-header {
   text-align: center;
   font-size: 1.25em;
 }
-/* line 311, ../sass/index.scss */
+/* line 313, ../sass/index.scss */
 .card ul.stack__collection li {
   padding-bottom: 1em;
   font-size: 1.1em;
   list-style: none;
 }
-/* line 316, ../sass/index.scss */
+/* line 318, ../sass/index.scss */
 .card ul.stack__collection li:before {
   position: relative;
   font-family: "FontAwesome";
@@ -306,24 +307,24 @@ footer {
   color: #FD2B2A;
   margin: 0 12px 0 0;
 }
-/* line 327, ../sass/index.scss */
+/* line 329, ../sass/index.scss */
 .card.medium {
   height: 290px;
   width: 290px;
   margin: 0px 1.2em;
 }
-/* line 333, ../sass/index.scss */
+/* line 335, ../sass/index.scss */
 .card.very-large {
   height: 300px;
   width: 800px;
 }
-/* line 338, ../sass/index.scss */
+/* line 340, ../sass/index.scss */
 .card.square {
   height: 300px;
   width: 300px;
 }
 
-/* line 346, ../sass/index.scss */
+/* line 348, ../sass/index.scss */
 .section-header {
   text-align: center;
   font-size: 1.5em;
@@ -333,100 +334,100 @@ footer {
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-  /* line 358, ../sass/index.scss */
+  /* line 360, ../sass/index.scss */
   header .navbar__inner {
     display: block;
     margin: 0 auto;
     text-align: center;
   }
-  /* line 364, ../sass/index.scss */
+  /* line 366, ../sass/index.scss */
   header .navbar__inner .navbar__logo {
     display: inline-block;
     padding: 0px 25px;
   }
-  /* line 369, ../sass/index.scss */
+  /* line 371, ../sass/index.scss */
   header .navbar__inner .navbar__logo .__logo {
     width: 60px;
   }
-  /* line 375, ../sass/index.scss */
+  /* line 377, ../sass/index.scss */
   header .navbar__wrapper {
     display: block;
     width: 95%;
     text-align: center;
   }
-  /* line 381, ../sass/index.scss */
+  /* line 383, ../sass/index.scss */
   header .navbar__wrapper .navbar_list {
     padding: 5px;
     display: flex;
     justify-content: space-evenly;
   }
-  /* line 387, ../sass/index.scss */
+  /* line 389, ../sass/index.scss */
   header .navbar__wrapper .navbar_list li {
     display: inline-block;
     padding: 0px;
   }
-  /* line 391, ../sass/index.scss */
+  /* line 393, ../sass/index.scss */
   header .navbar__wrapper .navbar_list li a {
     text-decoration: none;
     padding: 15px 15px;
     font-size: 1.1em;
     color: #707070;
   }
-  /* line 397, ../sass/index.scss */
+  /* line 399, ../sass/index.scss */
   header .navbar__wrapper .navbar_list li a:hover {
     border-bottom: 2px solid #FD2B2A;
   }
 
-  /* line 409, ../sass/index.scss */
+  /* line 412, ../sass/index.scss */
   .main .hero .hero__content {
     display: flex;
     width: 300px;
     margin: 0 auto;
   }
-  /* line 414, ../sass/index.scss */
+  /* line 417, ../sass/index.scss */
   .main .hero .hero__content .__logo {
     height: 150px;
   }
-  /* line 418, ../sass/index.scss */
+  /* line 421, ../sass/index.scss */
   .main .hero .hero__content .hero__text {
     margin: 20px auto;
     padding: 0px 10px;
     text-align: center;
   }
-  /* line 423, ../sass/index.scss */
+  /* line 426, ../sass/index.scss */
   .main .hero .hero__content .hero__text h2 {
     font-size: 1.0em;
   }
-  /* line 427, ../sass/index.scss */
+  /* line 430, ../sass/index.scss */
   .main .hero .hero__content .hero__text a {
     font-size: 0.9em;
   }
-  /* line 435, ../sass/index.scss */
+  /* line 438, ../sass/index.scss */
   .main .portfolio {
     margin: 100px 0;
   }
-  /* line 438, ../sass/index.scss */
+  /* line 441, ../sass/index.scss */
   .main .portfolio .row {
     width: 100%;
     display: block;
   }
-  /* line 443, ../sass/index.scss */
+  /* line 446, ../sass/index.scss */
   .main .portfolio .pf-card {
     display: inline-block;
     margin: 0.5em 0.5em;
     color: white;
   }
-  /* line 448, ../sass/index.scss */
+  /* line 451, ../sass/index.scss */
   .main .portfolio .pf-card .card-header {
     margin-top: 4em;
     font-size: 1.2em;
     font-weight: 600;
   }
-  /* line 454, ../sass/index.scss */
+  /* line 457, ../sass/index.scss */
   .main .portfolio .pf-card .description {
     padding: 0em 2em;
   }
-  /* line 458, ../sass/index.scss */
+  /* line 461, ../sass/index.scss */
   .main .portfolio .pf-card.large {
     width: 280px;
     height: 280px;
@@ -434,7 +435,7 @@ footer {
     background-repeat: no-repeat;
     background-size: cover;
   }
-  /* line 467, ../sass/index.scss */
+  /* line 470, ../sass/index.scss */
   .main .portfolio .pf-card.small {
     width: 280px;
     height: 280px;
@@ -442,24 +443,24 @@ footer {
     background-repeat: no-repeat;
     background-size: cover;
   }
-  /* line 474, ../sass/index.scss */
+  /* line 477, ../sass/index.scss */
   .main .portfolio .pf-card.small .card-header {
     margin-top: 2em;
     font-size: 1.2em;
     font-weight: 600;
   }
-  /* line 485, ../sass/index.scss */
+  /* line 488, ../sass/index.scss */
   .main .contact .row {
     margin: 0 auto;
     width: 100%;
     text-align: center;
     display: block;
   }
-  /* line 494, ../sass/index.scss */
+  /* line 497, ../sass/index.scss */
   .main .contact #submit-form .row {
     width: 90%;
   }
-  /* line 498, ../sass/index.scss */
+  /* line 501, ../sass/index.scss */
   .main .contact #submit-form input[type=text] {
     border: none;
     box-shadow: none;
@@ -470,7 +471,7 @@ footer {
     margin-bottom: 30px;
     background-color: #f8f8f8;
   }
-  /* line 509, ../sass/index.scss */
+  /* line 512, ../sass/index.scss */
   .main .contact #submit-form input[type=submit] {
     height: 42px;
     border-radius: 27px;
@@ -486,51 +487,75 @@ footer {
     cursor: pointer;
     text-transform: uppercase;
   }
-  /* line 524, ../sass/index.scss */
+  /* line 527, ../sass/index.scss */
   .main .contact #submit-form input[type=submit]:hover {
     color: #FD2B2A;
     background-color: #FFF;
   }
-  /* line 530, ../sass/index.scss */
+  /* line 533, ../sass/index.scss */
   .main .contact #submit-form .half-width {
     display: block;
     width: 80%;
     margin: auto;
   }
-  /* line 536, ../sass/index.scss */
+  /* line 539, ../sass/index.scss */
   .main .contact #submit-form .full-width {
     display: block;
     width: 80%;
     margin: auto;
   }
 
-  /* line 547, ../sass/index.scss */
+  /* line 550, ../sass/index.scss */
+  footer {
+    display: block;
+    text-align: center;
+  }
+  /* line 554, ../sass/index.scss */
+  footer .icons {
+    padding: 0px;
+  }
+  /* line 557, ../sass/index.scss */
+  footer .icons li {
+    display: inline-block;
+    padding: 0 10px;
+    font-size: 24px;
+    font-weight: 100;
+    text-decoration: none;
+    color: #FD2B2A;
+  }
+  /* line 565, ../sass/index.scss */
+  footer .icons li a {
+    text-decoration: none;
+    color: #FD2B2A;
+  }
+
+  /* line 574, ../sass/index.scss */
   .card {
     padding: 10px 5px;
   }
-  /* line 550, ../sass/index.scss */
+  /* line 578, ../sass/index.scss */
   .card .card-header {
     text-align: center;
     font-size: 1.25em;
   }
-  /* line 556, ../sass/index.scss */
+  /* line 584, ../sass/index.scss */
   .card ul li {
     padding-bottom: 1em;
     font-size: 1.1em;
   }
-  /* line 562, ../sass/index.scss */
+  /* line 590, ../sass/index.scss */
   .card.medium {
     width: 250px;
     margin: 20px 1.2em;
   }
-  /* line 567, ../sass/index.scss */
+  /* line 595, ../sass/index.scss */
   .card.very-large {
     width: 250px;
     height: 100%;
     margin: 0px 0px 25px 0px;
     padding-bottom: 2em;
   }
-  /* line 574, ../sass/index.scss */
+  /* line 602, ../sass/index.scss */
   .card.square {
     width: 250px;
   }
